--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -37,7 +37,7 @@ bonita.createaccountonlogin=true
 
 task.sendAlertEmail=false
 
-mail.host=smtp-relay.gmail.com
+mail.host=#smtp-relay.gmail.com
 mail.port=25
 mail.protocol=smtp
 mail.smtp.auth=false
