--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ multipart.maxRequestSize = 25MB
 #logging.file=c:/ecm.log
 
 ############### ECM PROPERTIES ###############
-ecm.version=2.0.7-SNAPSHOT
+ecm.version=2.0.7
 
 #validita' in giorni della password
 account.expires.days=365
