--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -183,6 +183,9 @@ pianoFormativo.meseFineModifica=12
 #relazioneAnnuale.dataFineModifica -> 31 Marzo
 relazioneAnnuale.giornoFineModifica=31
 relazioneAnnuale.meseFineModifica=3
+#ERM012514
+relazioneAnnuale.giornoPeriodoNuovo=30
+relazioneAnnuale.mesePeriodoNuovo=6
 
 ###### Workflow ######
 bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
