Modificato SMTP ambiente demo 3di al nuovo smtp.fake.bo.priv

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -37,8 +37,8 @@ bonita.createaccountonlogin=true
 
 task.sendAlertEmail=false
 
-mail.host=#smtp-relay.gmail.com
-mail.port=25
+mail.host=smtp-fake.bo.priv
+mail.port=1025
 mail.protocol=smtp
 mail.smtp.auth=false
 mail.smtp.starttls.enable=false
