fix bug data di proroga quando siamo nel periodo II del anno

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -18,6 +18,9 @@ debugBrokeProtocollo=true
 pianoFormativo.giornoFineModifica=31
 pianoFormativo.meseFineModifica=12
 
+relazioneAnnuale.giornoPeriodoNuovo=30
+relazioneAnnuale.mesePeriodoNuovo=5
+
 #data inizio dalla quale un evento viene considerato di versione 2 da mettere in formato yyyyMMdd
 evento.data.passaggio.versione.due=20180416
 
