--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -187,6 +187,8 @@ relazioneAnnuale.meseFineModifica=3
 relazioneAnnuale.giornoPeriodoNuovo=30
 relazioneAnnuale.mesePeriodoNuovo=6
 
+#ERM014776
+accreditamento.numeroGiorniDopoChiusura=7
 ###### Workflow ######
 bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
 bonita.serverurl=http://127.0.0.1:9999
