ERM015894 - controllo firma del file acetta anche eventual xml.p7m - per poter testare in profilo demo e stato messo indirizzo farlocco per la spedizione a cogeaps

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -54,4 +54,14 @@ application.baseurl=http://ecmtest.demo.3di.it/ecm/
 app.service.home=https://ecmtest.demo.3di.it/ecm/
 app.service.security=https://ecmtest.demo.3di.it/ecm/j_spring_cas_security_check
 
+########## Co.Ge.A.P.S. #########
+cogeaps.protocol=http
+cogeaps.host=nessun.indirizzo.valido
+cogeaps.port=1234
+cogeaps.rest_service.carica=/app/api/evento/carica
+cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
+cogeaps.username=blablabla
+cogeaps.password=blablabla
+cogeaps.proxy.attivo=false
+
 ##############################################
