--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # JPA
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.default_schema=ecmdb
 
