Cambiamenti per il Ticket#15926 - Modifica data calcolo quote annuali

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,6 +53,19 @@ debugBrokeProtocollo=false
 #debugSaltaScheduledTasks defalut=false se attiva mette in pausa i task
 debugSaltaScheduledTasks=false
 
+######################CONFIGURAZIONE DELLA DATA PER LA QUOTA ANNUALE #####################
+
+#Il giorno in cui inizia il calcolo della Quota Annuale
+pagamento.giornoInizioCalcolaQuotaAnnuale=01
+#Il messe in cui inizia il calcolo della Quota Annuale
+pagamento.messeInizioCalcolaQuotaAnnuale=04
+#Il giorno in cui finisce il calcolo della Quota Annuale
+pagamento.giornoFinisceCalcolaQuotaAnnuale=31
+#Il messe in cui finisce il calcolo della Quota Annuale
+pagamento.messeFinisceCalcolaQuotaAnnuale=12
+
+##########################################################################################
+
 #giorni minimi in cui il provider può effettuare l'integrazione (utilizzato per popolare la select)
 giorni.integrazione.min=5
 
