--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,8 @@
 
 	<groupId>it.tredi</groupId>
 	<artifactId>ecm</artifactId>
-	<version>2.0.19</version>
+	<version>2.0.20-SNAPSHOT</version>
 	<packaging>war</packaging>
-
 
 	<name>it.tredi.ecm</name>
 	<description>Progetto realizzato per Regione Veneto Sanità - "Sviluppo sistema informatico per la gestione dei crediti informativi ECM"</description>
