Audit per evento v3 #16904

--- a/src/main/resources/auditlabelmap.properties
+++ b/src/main/resources/auditlabelmap.properties
@@ -39,6 +39,7 @@ EventoRES.autorizzazionePrivacy=label.autorizzazione_privacy
 EventoRES.brochureEvento=label.brochure_evento
 EventoRES.confermatiCrediti=label.conferma_crediti_proposti_dal_sistema
 EventoRES.contenutiEvento=label.evento_contiene_questi_contenuti
+EventoRES.tematicaInteresse=label.tematica_interesse_speciale
 EventoRES.contrattiAccordiConvenzioni=label.allegato_contratti_accordi_convenzioni
 EventoRES.costo=label.costo_totale_eventi
 EventoRES.crediti=label.crediti_formativi_attribuiti_utente
@@ -121,6 +122,7 @@ EventoFAD.autorizzazionePrivacy=label.autorizzazione_privacy
 EventoFAD.brochureEvento=label.brochure_evento
 EventoFAD.confermatiCrediti=label.conferma_crediti_proposti_dal_sistema
 EventoFAD.contenutiEvento=label.evento_contiene_questi_contenuti
+EventoFAD.tematicaInteresse=label.tematica_interesse_speciale
 EventoFAD.contrattiAccordiConvenzioni=label.allegato_contratti_accordi_convenzioni
 EventoFAD.costo=label.costo_totale_eventi
 EventoFAD.crediti=label.crediti_formativi_attribuiti_utente
@@ -194,6 +196,7 @@ EventoFSC.autorizzazionePrivacy=label.autorizzazione_privacy
 EventoFSC.brochureEvento=label.brochure_evento
 EventoFSC.confermatiCrediti=label.conferma_crediti_proposti_dal_sistema
 EventoFSC.contenutiEvento=label.evento_contiene_questi_contenuti
+EventoFSC.tematicaInteresse=label.tematica_interesse_speciale
 EventoFSC.contrattiAccordiConvenzioni=label.allegato_contratti_accordi_convenzioni
 EventoFSC.costo=label.costo_totale_eventi
 EventoFSC.crediti=label.crediti_formativi_attribuiti_utente
