Rilascio Versione Evento 3 per TEST

--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -22,9 +22,10 @@ logging.level.org.apache.juli.logging.DirectJDKLog = ERROR
 logging.config=classpath:log4j.properties
 logging.level.org.thymeleaf.* ERROR
 
-evento.numeroversione.default=1
-evento.versioni.rieditabili=1,2
+evento.numeroversione.default=3
+evento.versioni.rieditabili=3
 evento.data.passaggio.versione.due=20180416
+evento.data.passaggio.versione.tre=20190127
 
 ############### ECM PROPERTIES ###############
 pianoFormativo.giornoFineModifica=31
