--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -22,7 +22,11 @@ relazioneAnnuale.giornoPeriodoNuovo=30
 relazioneAnnuale.mesePeriodoNuovo=5
 
 #data inizio dalla quale un evento viene considerato di versione 2 da mettere in formato yyyyMMdd
+evento.numeroversione.default=3
+evento.versioni.rieditabili=3
 evento.data.passaggio.versione.due=20180416
+evento.data.passaggio.versione.tre=20190127
+
 
 ###### PROTOCOLLO #######
 protocollo.endpoint=http://172.31.226.82/LapisWebSOAP/LapisWebSOAP.asp
