--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -16,14 +16,15 @@ logging.config=classpath:log4j.properties
 logging.level.org.thymeleaf.* ERROR
 
 #ERM14774
-#abilta / disabilita l'invio automatico di email come promemoria delle scadenza 
+#abilta / disabilita l'invio automatico di email come promemoria delle scadenza
 task.sendAlertEmail=true
 
 
 ############### ECM PROPERTIES ###############
-evento.numeroversione.default=2
-evento.versioni.rieditabili=1,2
+evento.numeroversione.default=3
+evento.versioni.rieditabili=3
 evento.data.passaggio.versione.due=20180416
+evento.data.passaggio.versione.tre=20190321
 
 pianoFormativo.giornoFineModifica=31
 pianoFormativo.meseFineModifica=12
