--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.validation-query=select 1
 #DEFAULT
 #spring.jpa.hibernate.naming-strategy=org.springframework.boot.orm.jpa.hibernate.SpringNamingStrategy
 
-#CASE SENSITIVE però la conversione a basso livelo su postgres sbaglia select account."changePassword" -> account.changePassword
+#CASE SENSITIVE perï¿½ la conversione a basso livelo su postgres sbaglia select account."changePassword" -> account.changePassword
 #spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 
 # SPRING INTERNATIONALIZATION
@@ -38,7 +38,7 @@ account.expires.days=365
 file.multipart.maxFileSize=2
 file.multipart.maxFileSize4MB=4
 
-#limite in minuti prima dello scadere entro cui è modificabile la seduta
+#limite in minuti prima dello scadere entro cui ï¿½ modificabile la seduta
 seduta.validation.minutes=30
 
 #email segreteria ECM
@@ -66,10 +66,10 @@ pagamento.messeFinisceCalcolaQuotaAnnuale=12
 
 ##########################################################################################
 
-#giorni minimi in cui il provider può effettuare l'integrazione (utilizzato per popolare la select)
+#giorni minimi in cui il provider puï¿½ effettuare l'integrazione (utilizzato per popolare la select)
 giorni.integrazione.min=5
 
-#giorni massimi in cui il provider può effettuare l'integrazione (utilizzato per popolare la select)
+#giorni massimi in cui il provider puï¿½ effettuare l'integrazione (utilizzato per popolare la select)
 giorni.integrazione.max=30
 
 #numero referee da selezionare
@@ -84,10 +84,10 @@ giorni.min.evento.provider.B=30
 #numero giorni minimi necessari per poter inserire evento riezione
 giorni.min.evento.riedizione=10
 
-#numero giorni prima dell'inizio di un evento fino a quando è possibile posticipare l'eento (provider A)
+#numero giorni prima dell'inizio di un evento fino a quando ï¿½ possibile posticipare l'eento (provider A)
 giorni.possibilita.posticipo.da.inizio.evento.provider.A=4
 
-#numero giorni prima dell'inizio di un evento fino a quando è possibile posticipare l'eento (provider b)
+#numero giorni prima dell'inizio di un evento fino a quando ï¿½ possibile posticipare l'eento (provider b)
 giorni.possibilita.posticipo.da.inizio.evento.provider.B=10
 
 #numero responsabili scientifici evento massimi
@@ -102,11 +102,11 @@ numero.massimo.coordinatori.evento=3
 #giorni massimi durata evento FSC
 giorni.max.evento.fsc=730
 
-#giorni massimi durata evento FSC con Tipologia evento diversa da Attività di ricerca
+#giorni massimi durata evento FSC con Tipologia evento diversa da Attivitï¿½ di ricerca
 #ATTENZIONE quando si cambia questa property occorre cambiare anche il testo dell'errore error.numero_massimo_giorni_evento_fsc_non_attivita_di_ricerca
 giorni.max.evento.fsc.versione2=365
 
-#giorni massimi durata evento FSC con Tipologia evento uguale ad Attività di ricerca
+#giorni massimi durata evento FSC con Tipologia evento uguale ad Attivitï¿½ di ricerca
 #ATTENZIONE quando si cambia questa property occorre cambiare anche il testo dell'errore error.numero_massimo_giorni_evento_fsc_attivita_di_ricerca
 giorni.max.evento.fsc.versione2.attivitaDiRicerca=730
 
@@ -142,7 +142,7 @@ durata.minima.evento.res=3
 #numero di versione degli eventi che viene utilizzata come default nel caso non sia stato possibile valutarla
 evento.numeroversione.default=3
 
-#numeri di versioni degli eventi dei quali è possibile effettuare la riedizione, è possibile mettere più versioni separandole con la virgola (es. 1,2)
+#numeri di versioni degli eventi dei quali ï¿½ possibile effettuare la riedizione, ï¿½ possibile mettere piï¿½ versioni separandole con la virgola (es. 1,2)
 evento.versioni.rieditabili=3
 
 #data inizio dalla quale un evento viene considerato di versione 2 da mettere in formato yyyyMMdd
@@ -174,7 +174,7 @@ giorni.prima.blocco.edit.gruppoB=10
 #abilta / disabilita l'invio automatico di email come promemoria delle scadenza
 task.sendAlertEmail=false
 
-#limite di valutazioni non date per cui un referee è selezionabile per una valutazione
+#limite di valutazioni non date per cui un referee ï¿½ selezionabile per una valutazione
 valutazioni.non.date.limite=3
 
 #giorni che il provider ha per poter modificare i dati e i documenti della domanda di accreditamento
@@ -271,7 +271,7 @@ protocollo.service.versione=rv
 
 ######### PROTOCOLLO RV #########
 protocollo.codApplicativo=S051.001
-protocollo.operatore.entrata=tania-ferrotti
+protocollo.operatore.entrata=utente
 protocollo.codStruttura=69.02.03.00.00
 protocollo.idc=C.120.23.1
 protocollo.endpoint=http://192.168.2.94/LapisWebSOAP/LapisWebSOAP.asp
