Add AUTHORS file, fix publiccode.yml

--- a/publiccode.yml
+++ b/publiccode.yml
@@ -4,7 +4,7 @@
 
 publiccodeYmlVersion: '0.2'
 name: Sistema documentale di gestione dell'Educazione Continua in Medicina (ECM)
-url: 'https://github.com'
+url: 'https://github.com/aziendazero/ecm'
 logo: logo.png
 releaseDate: '2020-01-23'
 developmentStatus: stable
@@ -23,13 +23,13 @@ maintenance:
   type: contract
   contractors:
     - name: 3D Informatica srl
-      website: 'https://www.3di.it'
+      website: 'http://www.3di.it'
       until: '2021-01-01'
 legal:
   license: AGPL-3.0-or-later
   mainCopyrightOwner: Regione del Veneto
   repoOwner: 3D Informatica srl
-  authorsFile: 3D Informatica srl
+  authorsFile: AUTHORS.txt 
 localisation:
   localisationReady: true
   availableLanguages:
@@ -38,10 +38,6 @@ it:
   conforme:
     misureMinimeSicurezza: true
     gdpr: true
-  piattaforme:
-    mypay: true
-    Co.Ge.A.P.S: true
-    Age.Na.S: true
 description:
   it:
     genericName: ECM
