--- a/publiccode.yml
+++ b/publiccode.yml
@@ -35,9 +35,12 @@ localisation:
   availableLanguages:
     - it
 it:
+  countryExtensionVersion: '0.2'
   conforme:
     misureMinimeSicurezza: true
     gdpr: true
+  riuso:
+    codiceIPA: azero
 description:
   it:
     genericName: ECM
@@ -50,3 +53,4 @@ description:
     features:
       - Gestione avanzata delle attività
       - Portale formativo
+
